--- a/chrome-extension_v1/manifest.json
+++ b/chrome-extension_v1/manifest.json
@@ -1,15 +1,22 @@
 {
-  // Required
   "manifest_version": 2,
   "name": "STOP XSS",
   "version": "1.0",
 
-  // Recommended
+   "content_scripts": [
+   {
+     "matches": ["<all_urls>"],
+     "run_at": "document_start",
+     "js": ["content.js"]
+   }
+ ],
   "description": "Saves you form XSS and also some ADS :)",
 
   "background" : {
   	"scripts" : ["background.js"]
   },
+
+  
 
   "permissions" : ["<all_urls>","webRequest","webRequestBlocking"]
 
